<resources>
    <string name="app_name">Calculator</string>
    <string name="chialaydu">%</string>
    <string name="C">C</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Six">6</string>
    <string name="Five">5</string>
    <string name="Four">4</string>
    <string name="Three">3</string>
    <string name="Two">2</string>
    <string name="One">1</string>
    <string name="Zero">0</string>
    <string name="cham">.</string>
    <string name="nhan">x</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="bang">=</string>
    <string name="chia">/</string>
    <string name="display"></string>
    <string name="display2"></string>
</resources>